# CarbonSync

./: LICENSE  README.md
api/: pyproject.toml
api/app/: main.py
sdk/python_sdk/: dto.py  monitor.py  pyproject.toml
src/ai/: code_analysis.py
src/ai/ai_integration/: main.py
src/ai/ai_integration/handlers/: ollama_handler.py
src/api/: pyproject.toml
src/api/app/: main.py
src/sdk/python_sdk/: .env.example  pyproject.toml
src/sdk/python_sdk/src/: auth.py  code_analysis.py  docker-compose.yaml  dto.py  exceptions.py  logger.py  monitor.py  producer.py
